# llvm2graphml

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Queries.md  README.md
.github/workflows/: pr.yml
build-system/: build-system.cmake  cpack.cmake  version.cmake
build-system/packaging/: cpack.DEB-ubuntu.cmake
ci/: Vagrantfile  macos-playbook.yaml  ubuntu-playbook.yaml
ci/helpers/: build-and-test.yaml  build-llvm2graphml.yaml  install-gremlin.yaml  install-python-packages.yaml  package.yaml  run-tests.yaml  variables.yaml
include/: BitcodeLoader.h  Builder.h  Edge.h  EdgeConnector.h  Emitter.h  FileType.h  GraphmlWriter.h  Logger.h  Node.h  Properties.h  TypeEmitter.h  Types.def  Version.h
src/: BitcodeLoader.cpp  Builder.cpp  CMakeLists.txt  Edge.cpp  EdgeConnector.cpp  Emitter.cpp  FileType.cpp  GraphmlWriter.cpp  Logger.cpp  Node.cpp  Properties.cpp  TypeEmitter.cpp  Version.cpp  llvm2graphmlTool.cpp
tests/: CMakeLists.txt
tests/integration-tests/: lit.cfg
tests/integration-tests/basic-block/: main.ll  test.groovy
tests/integration-tests/function/: main.ll  test.groovy
tests/integration-tests/instruction/: main.ll  test.groovy
tests/integration-tests/module/: main.ll  test.groovy
tests/integration-tests/regression/: main.ll  test.groovy
tests/integration-tests/type/: main.ll  test.groovy
